# qt4-cmake

./: CMakeLists.txt  MainWindow.h  README.md  main.cpp
